# cydintosh

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  partitions.csv  platformio.ini
components/: .gitkeep
enclosure/: Makefile  README.md  cydintosh_stand.3mf  cydintosh_stand.scad
enclosure/lib/: cydintosh.scad
homeassistant/: weather_to_mqtt.yaml
include/: disc_lfs.h  display.h  hw.h  hw_control.h  m68kconf.h  machw.h  mqtt_home.h  mqtt_weather.h  touch_cyd.h  umac_ipc.h  user_config.h.tmpl  video.h  wifi_info.h
lib/lcd_cyd/: CMakeLists.txt  lcd_cyd.c
lib/lcd_cyd/include/: lcd_cyd.h
mac-app/: .gitignore
mac-app/CydCtlApp/: CMakeLists.txt  CydCtlApp.c  Resources.r  build.sh
mac-app/OfficeLightsApp/: CMakeLists.txt  OfficeLightsApp.c  Resources.r  build.sh
mac-app/WeatherApp/: CMakeLists.txt  Resources.r  WeatherApp.c  build.sh  weather_icons.h
mac-app/WiFiApp/: CMakeLists.txt  Resources.r  WiFiApp.c  build.sh
mac-app/common/: CMakeLists.txt  esp_ipc.c  esp_ipc.h
src/: CMakeLists.txt  disc_lfs.c  display.c  hw_control.c  idf_component.yml  main.c  mqtt_home.c  mqtt_weather.c  touch_cyd.c  umac_ipc.c  video.c  wifi_info.c
tools/: capture_serial_logs.py  generate_patched_rom.py  set_macbinary_flags.py  update-disk.sh
web/: README.md  index.html  manifest.json  server.py
